crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__resolver__tests__snapshots__snapshot_resolve_token_custom_registry_from_credentials.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "priv-token-abc",
    ),
    source: CredentialsFile,
    detected: true,
}
