crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__resolver__tests__snapshots__snapshot_resolve_token_from_credentials_file.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "file-secret-token",
    ),
    source: CredentialsFile,
    detected: true,
}
