crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__resolver__tests__snapshots__snapshot_resolve_token_from_env_default.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "cio-secret-token-value",
    ),
    source: EnvDefault,
    detected: true,
}
