crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__resolver__tests__snapshots__snapshot_resolve_token_from_env_registry.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "my-reg-token",
    ),
    source: EnvRegistry,
    detected: true,
}
